--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
+    "uuid": "^3.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
